--- a/Recipe_page/assets/css_syntax.css
+++ b/Recipe_page/assets/css_syntax.css
@@ -15,9 +15,15 @@ h2 {
 }
 
 header > img {
-  width: 100px;##
+  width: 100px;
 }
 
+ul li a {
+  text-decoration: none;
+}
 
+body {
+  background-color: rgb(255,203,160);
+}
 
 do it from 8
