--- a/box_model/box_model.css
+++ b/box_model/box_model.css
@@ -1,5 +1,12 @@
 div {
+  height: 200px;
+  width: 200px;
+
+  padding: 50px;
+  border: 5px solid black;
 }
+
+
 
 #first-div {
   background-color: #39cccc;
@@ -7,8 +14,10 @@ div {
 
 #second-div {
   background-color: #ff4136;
+  box-sizing: border-box;
 }
 
 p {
   background-color: #7fdbff;
+   
 }
