--- a/box_model/box_model.css
+++ b/box_model/box_model.css
@@ -19,5 +19,25 @@ div {
 
 p {
   background-color: #7fdbff;
-   
+}
+
+.min-height-div {
+  min-height: : 10px;
+}
+
+.image-1-container {
+  width: 200px;
+  height: 600px;
+  background-color: chartreuse;
+}
+
+.image-1-container img {
+  width: 100%;
+}
+
+.image-2-container {
+  display: inline-block;
+  min-width: 200px;
+  height: 600px;
+  background: chartreuse;
 }
