--- a/display_boxmodel/assets/box_model.css
+++ b/display_boxmodel/assets/box_model.css
@@ -72,3 +72,55 @@ h2 + .user_review {
     border-top: 1px solid black;
 }
 
+nav ul li {
+  display: inline-block;
+}
+
+nav ul li a {
+  display: block;
+  padding: 20px;
+}
+
+nav {
+  display: inline-block;
+}
+
+body {
+  width: 900px;
+  margin: 0 auto;
+}
+
+section {
+  width: 700px;
+  display: inline-block;
+  vertical-align:top;
+}
+
+aside {
+  width: 180px;
+  display: inline-block;
+  margin-right: 15px;
+}
+
+aside ul li {
+  margin: 15px 0px;
+}
+
+ol li {
+  margin: 15px 0px;
+}
+
+input[type="text"], select {
+  display: block;
+  width: 175px;
+}
+textarea {
+  width: 350px;
+  vertical-align: bottom;
+  display: block
+}
+
+label {
+  display: block;
+  vertical-align: top
+}
